--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -1,4 +1,6 @@
 
+## References
+
 @article{methot_stock_2013,
   title = {Stock synthesis: a biological and statistical framework for fish stock assessment and fishery management},
   volume = {142},
