--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -784,3 +784,6 @@ knitr::include_graphics(
     "figures/bridging/Timeseries_comp_previous_assessments.png"
 )
 ```
+
+<!-- keep this at end -->
+\pagebreak
