--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
@@ -115,7 +115,7 @@ library(here)
 library(dplyr)
 
 source(here::here('Rcode/table_sens.R'))
-source(here::here('Rcode/table_decision.R'))
+source(here::here('Rcode/decision_table.R'))
 
 base_mod <- 'model/2025_base_model'
 mod_in <- r4ss::SS_read(here('model_runs', base_mod))
