--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -9,6 +9,7 @@
 
 # This table needs to be redone once the WA sport catches are updated
 catch_table |> # produced in 002_load_tables.qmd
+#catch_table_est_weights |> # uncomment this line to use the catch table with estimated weights from the SS3 output
   gt() |>
  cols_label(
     year = "Year",
@@ -19,8 +20,8 @@ catch_table |> # produced in 002_load_tables.qmd
     `5` = "OR-WA non-trawl (mt)",
     `6` = "OR sport (mt)",
     `7` = "WA sport (mt)",
-    #`8` = "WA sport (1000s fish)",
-    #Total = "Total Catch (mt)"
+    `8` = "WA sport (1000s fish)",
+    Total = "Total Catch (mt)"
   ) |>
   tab_options(
     table.font.size = 12,
