--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -257,7 +257,7 @@ projections_table |>
 #| warning: false
 #| echo: false
 #| eval: !expr eval_tables 
-#| tbl-cap: !expr if(eval_tables) decision_table_cap 
+#| tbl-cap: "!expr if(eval_tables) decision_table_cap" 
 #| tbl-pos: H
 table_decision(
   list(mod_low_A, mod_base_A, mod_high_A),
