--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -1,5 +1,5 @@
-## Tables 
-### Data
+# Tables 
+## Data
 
 ::: {.landscape}
 ```{r}
@@ -283,7 +283,7 @@ data_wide |>
 ```
 
 
-### Model results
+## Model results
  
 ```{r}
 #| label: tbl-model-config
@@ -461,7 +461,7 @@ reference_points_table |>
 
 ```
 
-### Management
+## Management
 
 \pagebreak
 
