--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -13,7 +13,7 @@ library(dplyr)
 
 source(here::here("Rcode", "decision_table.R"))
 
-replist <- r4ss::SS_output(here::here("model", "2025_base_model"))
+replist <- r4ss::SS_output(here::here("model", "2025_base_model"), verbose = FALSE, printstats = FALSE)
 inputs <- r4ss::SS_read(here::here("model", "2025_base_model"))
 
 tables <-r4ss::table_all(replist, dir = here::here("report"))
